Были написаны тесты для редереров и корректоров